--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
