--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "react-scripts": "5.0.1",
     "test": "react-scripts test",
     "clean": "rimraf build",
     "eject": "react-scripts eject",
@@ -43,6 +44,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.0",
     "react-router-dom": "^6.14.1",
+    "react-scripts": "5.0.1",
     "rimraf": "^5.0.1"
   },
   "packageManager": "yarn@3.6.1"
