--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --output ./build",
     "react-scripts": "5.0.1",
     "test": "react-scripts test",
     "clean": "rimraf build",
